# milestone_ii

./: .gitignore  README.md  evwatts.public.sh  main.py  pyproject.toml  requirements.txt
Supervised/: Beginning_Classification.ipynb  Data_Cleaning20250219.ipynb  Data_Exploration.ipynb  Models_2025019.ipynb
jones/: EDA_part1.py  EDA_part2.py  Prep_data_UL.py  Prep_data_UL_V2.ipynb  Prep_data_UL_V2.py  SHAP_plots.ipynb  Sensitivity_Analysis.py  Sensitivity_Analysis_V2.py  UL_Model_Evaluations.py  Unsupervised_Learning.py  Unsupervised_Learning_Hyper_param.ipynb  Unsupervised_Learning_Hyper_param.py  Unsupervised_Learning_V3.ipynb  Unsupervised_Learning_V3.py
misc/jones/: Feature_Selection_Unsupervised_Learning.ipynb  Prep_data_UL.py  Sensitivity_Analysis.py  Sensitivity_Analysis_V2.py  UL_Model_Evaluations.py  Unsupervised_Learning.py  Unsupervised_Learning_Hyper_param.ipynb  Unsupervised_Learning_V3.py
team17/: _supervised_conf.py  _supervised_evaluations.py  _supervised_functions.py  _supervised_pipeline.py  requirements.txt  supervised.py  temp_super.py  unsupervised.py
team17/assets_reduced/: evwatts.public.bat  evwatts.public.connector.csv  evwatts.public.evse.csv  evwatts.public.session.csv  evwatts.public.vehicles.csv  evwatts.public.vehiclesessions.csv  evwatts.public.vehicletrips.csv
team17/super/: Data_Cleaning20250219.ipynb  Data_Exploration.ipynb  evaluations.py  functions.py  parameters.py  pipeline.py
team17/unsup/: EDA_part1.py  EDA_part2.py  Prep_data_UL_V2.py  Sensitivity_Analysis_V2.py  Unsupervised_Learning_Hyper_param.py  Unsupervised_Learning_V3.py
team17_mjonesgm_atunison_szymons/: _supervised_functions.py  main.py  supervised.py
unsupervised_sarnowicz/: explore_flagid.ipynb
